--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@types/he": "^1.1.1",
     "@types/jsonata": "^1.5.1",
     "@types/pako": "^1.0.1",
-    "fast-xml-parser": "^3.17.4",
     "he": "^1.2.0",
     "jsonata": "^1.8.3",
     "pako": "^1.0.11",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "xmljsonkit": "^1.0.4"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.10.4",
